<resources>
    <string name="appName">Museums</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="registration">Sign up</string>
    <string name="email">E-mail</string>
    <string name="passwordAgain">Password confirm</string>
    <string name="phoneNumber">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="productDesc">Product description</string>
    <string name="continueWithGoogle">Sign in with Google</string>
    <string name="reserved">Reserve</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="default_web_cliend_id" translatable="false">889291313898-os69tjsoed901s77pltrkbpsqq8hjjb4.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="cart">cart</string>

    <string-array name="museumNamesList">
        <item>Museum of Illusions</item>
        <item>Csodák Palotája</item>
        <item>Light Art Museum</item>
    </string-array>

    <string-array name="museumDescList">
        <item>Varázslatos kiállítás, határok nélkül.</item>
        <item>Élmények, felfedezések és csodák.</item>
        <item>Egyedülálló fényképek és installációk.</item>
    </string-array>

    <array name="museumPriceList">
        <item>5000/fő</item>
        <item>4000/fő</item>
        <item>9000/fő</item>
    </array>

    <array name="museumImageList">
        <item>@drawable/moi_logo</item>
        <item>@drawable/csopa_logo1</item>
        <item>@drawable/lam_logo1</item>
    </array>


</resources>