<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/custom_menu_item"
        />

    <item
        android:id="@+id/logout_button"
        android:title="@string/logout"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="2"

        />
</menu>