<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:adjustViewBounds="true"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/lam_logo1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            app:layout_constraintLeft_toRightOf="@id/itemImage"
            app:layout_constraintTop_toTopOf="@+id/itemImage" />

        <TextView
            android:id="@+id/itemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/productDesc"
            app:layout_constraintLeft_toLeftOf="@id/itemTitle"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginBottom="4dp"
            android:text="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/delete_from_cart"
            app:layout_constraintStart_toEndOf="@+id/itemImage" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="58dp"
            android:onClick="buy"
            android:text="@string/reserved"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

        <Button
            android:id="@+id/delete_from_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:onClick="delete"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.753"
            app:layout_constraintStart_toEndOf="@+id/add_to_cart"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>